--- a/index.htm
+++ b/index.htm
@@ -16,12 +16,13 @@
 <body class="bg-dark text-white">
     <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary">
         <div class="container-fluid">
-    
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
                     <li class="nav-item">
@@ -31,7 +32,8 @@
                         <a href="#sosTelegram" data-bs-toggle="collapse" class="nav-link">SOS TELEGRAM</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">MATRIZ DE ESCALAMENTO</a>
+                        <a href="#matrizEscalamento" data-bs-toggle="collapse" class="nav-link">MATRIZ DE
+                            ESCALAMENTO</a>
                     </li>
                 </ul>
             </div>
@@ -40,7 +42,7 @@
 
     <!-- Helper -->
     <div id="accordion">
-        <div id="helperNoc" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
+        <div id="helperNoc" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
             <div class="container-sm d-flex flex-column">
 
                 <form class="form-floating text-dark mb-2 w-75 align-self-center">
@@ -158,6 +160,109 @@
                 </form>
 
                 <button class="btn btn-primary w-50">Copiar</button>
+            </div>
+        </div>
+
+        <!-- MATRIZ DE ESCALAMENTO-->
+        <div id="matrizEscalamento" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
+            <div class="container">
+                <div class="table-responsive">
+                    <table class="table align-middle text-center table-bordered table-striped table-dark">
+                        <thead class="align-middle">
+                            <th scope="col" class="bg-primary">FAILURE</th>
+                            <th scope="col" class="bg-primary">TT Info Update (max.)</th>
+                            <th scope="col" colspan="4" class="bg-primary">Escalation procedure</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>x = # Customers</td>
+                                <td></td>
+                                <td>Level 2</td>
+                                <td>Level 3</td>
+                                <td>Level 4</td>
+                                <td>Level 5</td>
+                            </tr>
+                            <tr>
+                                <td>x &lt; 250</td>
+                                <td rowspan="2">2H em 2H</td>
+                                <td rowspan="4">5min</td>
+                                <td>3H</td>
+                                <td>6H</td>
+                                <td>24H</td>
+                            </tr>
+                            <tr>
+                                <td>250 =&lt; x &lt; 500</td>
+                                <td rowspan="2">30min</td>
+                                <td rowspan="2">3H</td>
+                                <td rowspan="2">8H</td>
+                            </tr>
+                            <tr>
+                                <td>500 =&lt; x &lt; 1000</td>
+                                <td>1H em 1H</td>
+                            </tr>
+                            <tr>
+                                <td>x &gt; 1000</td>
+                                <td>30min em 30min</td>
+                                <td>5min</td>
+                                <td>1H</td>
+                                <td>4H</td>
+                            </tr>
+                            <tr>
+                                <td colspan="6"></td>
+                            </tr>
+                            <tr>
+                                <td colspan="6"></td>
+                            </tr>
+                            <tr>
+                                <td>Corte reincidente &lt; 2meses; NOC não consegue acionar SPOC 1ª e 2ª linha; técnico
+                                    indica que não tem condições para resolver ou ausentou-se.</td>
+                                <td></td>
+                                <td><span class="fw-bold">NA</span></td>
+                                <td>5 m</td>
+                                <td colspan="2">
+                                    <span class="fw-bold">NA</span>
+                                    <p>
+                                        Entram no escalamento dos incidentes.
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="6"></td>
+                            </tr>
+                            <tr>
+                                <td colspan="6"></td>
+                            </tr>
+                            <tr>
+                                <td>Anel (SDH/DWDM/Rede ON)</td>
+                                <td rowspan="3"> 30min em 30min</td>
+                                <td rowspan="3">5min</td>
+                                <td rowspan="3">5min</td>
+                                <td rowspan="3">1,5h</td>
+                                <td rowspan="3">4H</td>
+                            </tr>
+                            <tr>
+                                <td>Core IP; Switch Voz, HE TV</td>
+                            </tr>
+                            <tr>
+                                <td>Acesso a nível nacional Cable Modems; STB's</td>
+                            </tr>
+                            <tr>
+                                <td colspan="6"></td>
+                            </tr>
+                            <tr>
+                                <td colspan="6"></td>
+                            </tr>
+                            <tr>
+                                <td>TV canais</td>
+                                <td>1H em 1H</td>
+                                <td>5min</td>
+                                <td>5min</td>
+                                <td>2H</td>
+                                <td>8H</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
